# AIE7

01_Prompt Engineering and Prototyping Best Practices/: ACTIVITIES.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  QUESTION_ANSWERS.md
03_End-to-End_RAG/: README.md  pyproject.toml
03_End-to-End_RAG/aimakerspace/aimakerspace.egg-info/: PKG-INFO  SOURCES.txt
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  PROMPTS.md
06_BonusAssignment/: README.md  research_paper_social_media_system.ipynb
06_BonusAssignment/output/: final_social_media_post.md
06_Multi_Agent_with_LangGraph/: VIBE_LEARNING.md
06_Multi_Agent_with_LangGraph/content/data/716e0382/: Student_Loans_Low_Income_Response.txt
06_Multi_Agent_with_LangGraph/content/data/b990abe4/: Customer_Assistance_Student_Loans_Low_Income_Students_Response.txt
07_Synthetic_Data_Generation_and_LangSmith/: PROMPTS.md  README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  generate_kg_mermaid.py  loan_kg_mermaid.md
08_AdvancedBuild/: ClaudeCodePrompt.md  Evaluating_Semantic_based_Chunking_with_Ragas.ipynb  PROMPTS.md  SemanticChunking.md
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  PROMPTS.md
