[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aimakerspace"
version = "0.1.0"
description = "Utilities for RAG and OpenAI workflows."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyPDF2"
]

[tool.setuptools.packages.find]
where = ["aimakerspace"] 